--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,17 @@ header h3 {
   width: 100%;
   border-radius: 10px;
   padding: 10px 0;
+  -webkit-touch-callout: none;
+  /* iOS Safari */
+  -webkit-user-select: none;
+  /* Safari */
+  -khtml-user-select: none;
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Old versions of Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
+  user-select: none;
 }
 
 .numpad-row {
