--- a/scss/global/palette.scss
+++ b/scss/global/palette.scss
@@ -24,7 +24,7 @@ $light-func-shadow: #1b6066;
 $light-func-hover: #62b5bc;
 $light-orange: #c85402;
 $light-orange-hover: #ff8a38;
-$dark-orange-shadow: #873901;
+$light-orange-shadow: #873901;
 
 //negative
 $negative-bg: #17062a;
