made page responsive

--- a/scss/components/_credits.scss
+++ b/scss/components/_credits.scss
@@ -5,3 +5,10 @@
   left: 20px;
   text-decoration: none;
 }
+
+@media screen and (max-width: 600px) {
+  .attribution {
+    top: 10px;
+    left: 10px;
+  }
+}
