--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,12 @@
   text-decoration: none;
 }
 
+@media screen and (max-width: 600px) {
+  .attribution {
+    top: 10px;
+    left: 10px;
+  }
+}
 header {
   display: flex;
   flex-direction: row;
@@ -77,6 +83,12 @@ header h3 {
   padding: 0;
 }
 
+@media screen and (max-width: 600px) {
+  #screen-io {
+    font-size: 32px;
+    margin: 20px 30px;
+  }
+}
 .numpad {
   display: flex;
   flex-direction: row;
@@ -130,6 +142,20 @@ header h3 {
   flex: auto;
 }
 
+@media screen and (max-width: 600px) {
+  .btn {
+    font-size: 28px;
+    margin: 5px;
+  }
+
+  .func {
+    font-size: 16px;
+  }
+
+  .wide {
+    margin: 3.5px;
+  }
+}
 body {
   font-family: "Spartan";
   margin: 0;
@@ -320,6 +346,12 @@ h2 {
   margin: 0;
 }
 
+@media screen and (max-width: 600px) {
+  main {
+    margin-top: 10px;
+    width: 90%;
+  }
+}
 body {
   background-color: #3a4663;
 }
