--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -17,3 +17,16 @@
 .wide {
   flex: auto;
 }
+
+@media screen and (max-width: 600px) {
+  .btn {
+    font-size: 28px;
+    margin: 5px;
+  }
+  .func {
+    font-size: 16px;
+  }
+  .wide {
+    margin: 3.5px;
+  }
+}
