--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -21,6 +21,7 @@ header {
     span {
       flex: auto;
       text-align: center;
+      position: relative;
     }
   }
   .theme-picker {
@@ -47,5 +48,14 @@ header {
   }
   h3 {
     align-self: flex-end;
+  }
+  #setDarkTheme,
+  #setLightTheme,
+  #setNegTheme {
+    position: absolute;
+    z-index: 10000;
+    width: 100%;
+    height: 50px;
+    margin-top: -20px;
   }
 }
